--- a/tox.ini
+++ b/tox.ini
@@ -12,4 +12,4 @@ deps =
 setenv =
     MOZ_HEADLESS=1
     DISPLAY=1
-commands = pytest tests  {posargs}
+commands = pytest --alluredir=allure_results
